client/src/app/components/tool-box/tool-box.component.scss
.tool-container {
    display: flex;
    justify-content: space-around;
    box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 3px, rgba(0, 0, 0, 0.45) 0px 1px 3px;
    align-items: center;
}

.tool {
    box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 3px, rgba(0, 0, 0, 0.45) 0px 1px 3px;
}

.tool:hover {
    transform: scale(1.1);
}

.tool:active {
    background-color: rgba(0, 0, 0, 0.8);
}

input[type='color'] {
    margin: 0px;
    padding: 0px;
    border-width: 0px;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 1px 3px, rgba(0, 0, 0, 0.4) 0px 1px 2px;
}

input[type='color']:hover {
    transform: scale(1.1);
}

.drawTool {
    display: flex;
    justify-content: space-between;
    align-content: center;
    width: 20vw;
}

.commonTool {
    width: 10vw;
    display: flex;
    justify-content: space-between;
}

